--- a/index.html
+++ b/index.html
@@ -1,1 +1,15 @@
-Here we are !
+<!DOCTYPE html PUBLIC "-//IETF//DTD HTML 2.0//EN">
+<HTML>
+   <HEAD>
+      <TITLE>Raffaele Petracca</TITLE>
+   </HEAD>
+   <BODY>
+   <H2>Welcome</H2>
+   <P>  
+        <ul>
+            <li><a href="http://www.skillbill.it/">Skillbill</a></li>
+            <li><a href="https://it.linkedin.com/in/raffaelepetracca">LinkedIn</a></li>
+            <li><a href="https://github.com/raffaelepetracca">GitHub</a></li>
+        <ul>
+    </P> 
+</BODY>
